# Vantage

./: .env.example  .eslintrc.js  .gitleaks.toml  .pre-commit-config.yaml  README.md  docker-compose.yml  lighthouserc.json  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  lighthouse.yml  security.yml
.husky/: pre-commit
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/api/src/: __init__.py  main.py
apps/api/src/api/: __init__.py
apps/api/src/api/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
apps/api/src/api/routes/: __init__.py  analytics.py  auth.py  client_profiles.py  conversations.py  health.py  leads.py  searches.py  voice.py
apps/api/src/core/: __init__.py  sentry.py  supabase.py
apps/api/src/repositories/: __init__.py  client_profile.py  conversation.py  lead.py  search.py
apps/api/src/schemas/: __init__.py  analytics.py  client_profile.py  conversation.py  lead.py  search.py  voice.py
apps/api/src/services/: __init__.py  analytics.py  conversation_agent.py  llm_provider.py  llm_service.py  orchestrator.py
apps/api/src/services/scoring/: __init__.py  config.py  engine.py
apps/api/src/services/sources/: __init__.py  base.py  mock_adapter.py  rate_limiter.py
apps/api/src/services/voice/: __init__.py  piper.py  service.py  whisper.py
apps/api/src/utils/: __init__.py  logging.py
apps/api/tests/services/: test_voice.py
apps/web/: .dockerignore  .eslintrc.js  ACCESSIBILITY_SETUP.md  Dockerfile  middleware.ts  next.config.js  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vitest.a11y.config.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/app/(auth)/: layout.tsx
apps/web/app/(auth)/login/: page.tsx
apps/web/app/(auth)/register/: page.tsx
apps/web/app/(dashboard)/: layout.tsx  page.tsx
apps/web/app/(dashboard)/analytics/: page.tsx
apps/web/app/(dashboard)/clients/: page.tsx
apps/web/app/(dashboard)/clients/[id]/: page.tsx
apps/web/app/(dashboard)/clients/new/: page.tsx
apps/web/app/(dashboard)/leads/: page.tsx
apps/web/app/(dashboard)/search/: page.tsx
apps/web/app/onboarding/: page.tsx
apps/web/components/analytics/: metrics-cards.tsx  score-correlation.tsx  source-breakdown.tsx
apps/web/components/chat/: chat-input.tsx  chat-interface.tsx  index.ts  message-bubble.tsx  message-list.tsx  voice-chat-input.tsx  voice-message.tsx
apps/web/components/client/: client-card.tsx  client-detail.tsx  client-form.tsx  client-list.tsx  client-switcher.tsx  conversation-history.tsx
apps/web/components/leads/: accuracy-badge.tsx  index.ts  lead-row.tsx  leads-filters.tsx  leads-table.tsx  status-dropdown.tsx  status-history.tsx
apps/web/components/providers/: auth-provider.tsx
apps/web/components/search/: index.ts  lead-card.tsx  manual-override.tsx  quality-slider.tsx  search-header.tsx  search-progress.tsx  search-results.tsx
apps/web/components/voice/: audio-player.tsx  index.ts  recording-button.tsx  voice-toggle.tsx
apps/web/hooks/: use-audio-recorder.ts
apps/web/lib/: logger.ts  utils.ts  voice-api.ts
apps/web/lib/supabase/: client.ts  server.ts
apps/web/stores/: analytics-store.ts  auth-store.ts  client-store.ts  conversation-store.ts  leads-store.ts  search-store.ts  voice-store.ts
apps/web/styles/: accessibility.css
apps/web/tests/: setup-a11y.ts
apps/web/tests/a11y/: components.a11y.test.tsx
docs/qa/gates/: e5-s5-search-page.yml  e5-s6-leads-page.yml
docs/stories/epic-5/: 5.1.github-actions-ci.md  5.2.pre-commit-hooks.md  5.3.docker-compose.md  5.4.dependabot.md  5.5.search-page.md  5.6.leads-page.md  5.7.lighthouse-ci.md  5.8.test-coverage.md
